--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,21 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18.20.7'
 
-      - name: Install dependencies
-        run: |
-          npm install
-
-      - name: Run linter
-        run: |
-          npm run lint
+#      - name: Run linter
+#        run: |
+#          npm run lint
 
 #      - name: Run tests
 #        run: |
@@ -39,10 +29,10 @@ jobs:
 #          curl -X POST -H "Content-Type: application/json" \
 #            -d @coverage-summary.json \
 #            "https://your-grafana-instance/api/datasources/proxy/1/metrics/api/v1/import"
-
       - name: Build Docker image
         run: |
           docker build -t express-ts-app .
+
 
       - name: Start application with Docker Compose
         run: |
