--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "scripts": {
     "build": "npx tsc",
     "test": "jest --forceExit",
-    "start": "node dist/app.js",
-    "dev": "nodemon app.ts"
+    "start": "node dist/index.js",
+    "dev": "nodemon app.ts",
+    "prod": "nodemon app.js"
   },
   "dependencies": {
     "@decorators/express": "^3.0.0",
