--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=example
     volumes:
-      - mongodb_data:/data/db
+      - ~/mongodb/database:/data/db
     ports:
       - "27017:27017"
     restart: unless-stopped
