--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "build": "npx tsc",
     "test": "jest --forceExit",
-    "start": "node dist/index.js",
+    "start": "node dist/app.js",
     "dev": "nodemon app.ts",
     "prod": "nodemon app.js"
   },
