--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "macromateback",
   "version": "1.0.0",
-  "description": "",
   "homepage": "https://github.com/MacroMate-ynov/back#readme",
   "bugs": {
     "url": "https://github.com/MacroMate-ynov/back/issues"
@@ -39,6 +38,8 @@
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ts-node-dev": "^2.0.0",
@@ -60,5 +61,10 @@
     "mongodb-memory-server": "^10.1.4",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6"
-  }
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "keywords": [],
+  "description": ""
 }
