--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,28 @@ services:
     ports:
       - "27017:27017"
     restart: unless-stopped
+
   sonarqube:
     image: sonarqube:latest
     ports:
       - "9000:9000"
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+      - sonarqube_logs:/opt/sonarqube/logs
     environment:
-      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
+      - SONARQUBE_JDBC_URL=jdbc:postgresql://db:5432/sonar
+      - SONARQUBE_JDBC_USERNAME=${{ secrets.USER_POSTGRE }}
+      - SONARQUBE_JDBC_PASSWORD=${{ secrets.SECRET_POSTGRE }}
+    depends_on:
+      - db
+  db:
+    image: postgres:latest
+    environment:
+      - POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+      - POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
   app:
     build:
@@ -33,3 +49,7 @@ services:
 
 volumes:
   mongodb_data:
+  sonarqube_data:
+  sonarqube_extensions:
+  sonarqube_logs:
+  postgres_data:
