--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
   db:
     image: postgres:latest
     environment:
-      - POSTGRES_USER=${{ secrets.POSTGRES_USER }}
-      - POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+      - POSTGRES_USER=${{ secrets.USER_POSTGRE }}
+      - POSTGRES_PASSWORD=${{ secrets.SECRET_POSTGRE }}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
