--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,3 +78,16 @@ jobs:
             docker-compose pull
             docker-compose up -d --build
           EOF
+
+  build:
+    name: Build and analyze
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: SonarSource/sonarqube-scan-action@v4
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
