--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,7 +88,7 @@ jobs:
     steps:
       - name: Wait for SonarQube to be ready
         run: |
-          until curl -sSL -u ${SONARQUBE_TOKEN}: --cacert macromate-ynov_me.crt ${SONAR_HOST_URL}/api/system/health | grep '"health":"GREEN"'; do
+          until curl -sSL -u ${SONARQUBE_TOKEN}: --cacert macromate-ynov_me.crt https://macromate-ynov.me:8000/api/system/health | grep '"health":"GREEN"'; do
             echo "Waiting for SonarQube to be ready..."
             sleep 10
           done
