--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/swagger-ui-express": "^4.1.7",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
+    "nodemon": "^3.1.9",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6"
   },
