--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,9 @@
-sonar.projectKey=macroMate_back
-sonar.ssl.verificationMode=none
-sonar.scanner.skipSSLValidation=true
+# sonar-project.properties
+sonar.projectKey=macroMate_back_sample
+sonar.projectName=macroMate Back Sample
+sonar.projectVersion=1.0
+sonar.sources=.
+sonar.host.url=https://macromate-ynov.me:8000
+sonar.login=sqp_93ad7961a2d739aa06989837ea8cd8244b042677
+sonar.tests=test
+sonar.javascript.lcov.reportPaths=coverage/lcov-report/lcov-report.json
