--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,18 @@
-# sonar-project.properties
+sonar.login=sqp_93ad7961a2d739aa06989837ea8cd8244b042677
 sonar.projectKey=macroMate_back_sample
 sonar.projectName=macroMate Back Sample
 sonar.projectVersion=1.0
-sonar.sources=.
+
 sonar.host.url=https://macromate-ynov.me:8000
-sonar.login=sqp_93ad7961a2d739aa06989837ea8cd8244b042677
-sonar.tests=test
-sonar.javascript.lcov.reportPaths=coverage/lcov-report/lcov-report.json
+
+# Chemin des fichiers sources
+sonar.sources=src
+
+# Chemin des fichiers de tests
+sonar.tests=tests
+
+# Format des rapports de couverture
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+# Exclure explicitement les fichiers de test des sources
+sonar.exclusions=tests/**
